; ModuleID = '/home/carl/AnghaBench/freebsd/stand/kshim/extr_bsd_busspace.c_bus_space_write_region_4.c'
source_filename = "/home/carl/AnghaBench/freebsd/stand/kshim/extr_bsd_busspace.c_bus_space_write_region_4.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.burst = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @bus_space_write_region_4(i32 %0, i32 %1, i32 %2, i32* %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  store i32 %0, i32* %6, align 4
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32* %3, i32** %9, align 8
  store i32 %4, i32* %10, align 4
  %11 = load i32, i32* %8, align 4
  %12 = load i32, i32* %7, align 4
  %13 = add nsw i32 %12, %11
  store i32 %13, i32* %7, align 4
  br label %14

14:                                               ; preds = %17, %5
  %15 = load i32, i32* %10, align 4
  %16 = icmp sge i32 %15, 1
  br i1 %16, label %17, label %31

17:                                               ; preds = %14
  %18 = load i32, i32* %7, align 4
  %19 = sext i32 %18 to i64
  %20 = inttoptr i64 %19 to %struct.burst*
  %21 = load i32*, i32** %9, align 8
  %22 = bitcast i32* %21 to %struct.burst*
  %23 = bitcast %struct.burst* %20 to i8*
  %24 = bitcast %struct.burst* %22 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %23, i8* align 4 %24, i64 4, i1 false)
  %25 = load i32, i32* %7, align 4
  %26 = add nsw i32 %25, 4
  store i32 %26, i32* %7, align 4
  %27 = load i32*, i32** %9, align 8
  %28 = getelementptr inbounds i32, i32* %27, i64 1
  store i32* %28, i32** %9, align 8
  %29 = load i32, i32* %10, align 4
  %30 = sub nsw i32 %29, 1
  store i32 %30, i32* %10, align 4
  br label %14

31:                                               ; preds = %14
  br label %32

32:                                               ; preds = %36, %31
  %33 = load i32, i32* %10, align 4
  %34 = add nsw i32 %33, -1
  store i32 %34, i32* %10, align 4
  %35 = icmp ne i32 %33, 0
  br i1 %35, label %36, label %45

36:                                               ; preds = %32
  %37 = load i32*, i32** %9, align 8
  %38 = getelementptr inbounds i32, i32* %37, i32 1
  store i32* %38, i32** %9, align 8
  %39 = load i32, i32* %37, align 4
  %40 = load i32, i32* %7, align 4
  %41 = sext i32 %40 to i64
  %42 = inttoptr i64 %41 to i32*
  store volatile i32 %39, i32* %42, align 4
  %43 = load i32, i32* %7, align 4
  %44 = add nsw i32 %43, 4
  store i32 %44, i32* %7, align 4
  br label %32

45:                                               ; preds = %32
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
